--- a/index.html
+++ b/index.html
@@ -565,7 +565,7 @@
   私たちについて
 </h2>
 <p>
-                        私たち株式会社マルサンは、重軽量物の運搬・組立解体を通して<br/>北陸シェアのは半数もち、地域の発展と人々の暮らしを支えています。
+                        私たち株式会社マルサンは、重軽量物の運搬・組立解体を通して<br/>北陸シェアの半数をもち、地域の発展と人々の暮らしを支えています。
                     </p>
 <p>他社で断られたあんなことやこんなことも、すべてお任せください。</p>
 <div class="c_btn">
