--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@
 </div>
 <ul class="h_nav">
 <li>
-<a href="/service/">事業案内</a>
+<a href="service/">事業案内</a>
 <div class="sub">
 <div class="row">
 <dl>
@@ -448,7 +448,7 @@
                                                 藤原重機は、機械設備の輸送・移動・メンテナンスを主とした運送事業を行なっております。
                       
                                                 <div class="c_btn">
-<a href="/service/">詳しく見る</a>
+<a href="service/">詳しく見る</a>
 </div>
 </dd>
 </dl>
