--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@
 <dl>
 <dt>事業案内</dt>
 <dd>
-                                                藤原重機は、機械設備の輸送・移動・メンテナンスを主とした運送事業を行なっております。
+                                                機械や設備の輸送・移動・解体・組立、据え付けを主とした運送事業を行なっております。
                       
                                                 <div class="c_btn">
 <a href="service/">詳しく見る</a>
@@ -454,17 +454,19 @@
 </dl>
 <ul>
 <li>
-<a href="/service/transport/">重量物の運搬</a>
+<a href="/service/#transport">重量物運搬据付</a>
 </li>
 <li>
-<a href="/service/dismantling/">解体・組立、据え付け</a>
+<a href="/service/#dismantling/">据付後の設備工事、各種工事</a>
 </li>
 <li>
-<a href="/service/layout/">工場内のレイアウト変更</a>
+<a href="/service/#layout/">保管・修理・保守</a>
+</li>
+<li>
+<a href="/service/#disposal/">解体・撤去・廃棄</a>
 </li>
 </ul>
-<ul>
-</ul>
+
 </div>
 </div>
 </li>
@@ -565,7 +567,7 @@
   私たちについて
 </h2>
 <p>
-                        私たち株式会社マルサンは、重軽量物の運搬・組立解体を通して<br/>北陸シェアの半数をもち、地域の発展と人々の暮らしを支えています。
+                        私たち株式会社マルサンは、重軽量物の運搬・組立解体を通して<br/>北陸シェアのは半数もち、地域の発展と人々の暮らしを支えています。
                     </p>
 <p>他社で断られたあんなことやこんなことも、すべてお任せください。</p>
 <div class="c_btn">
