--- a/service/index.html
+++ b/service/index.html
@@ -452,16 +452,16 @@
 </dl>
 <ul>
 <li>
-<a href="service/#transport">重量物運搬据付</a>
+<a href="#transport">重量物運搬据付</a>
 </li>
 <li>
-<a href="service/#dismantling">据付後の設備工事、各種工事</a>
+<a href="#dismantling">据付後の設備工事、各種工事</a>
 </li>
 <li>
-<a href="service/#layout">保管・修理・保守</a>
+<a href="#layout">保管・修理・保守</a>
 </li>
 <li>
-<a href="service/#disposal">解体・撤去・廃棄</a>
+<a href="#disposal">解体・撤去・廃棄</a>
 </li>
 </ul>
 
@@ -619,7 +619,7 @@
                         事業一覧
                     </h3>
                     <ul>
-                        <div id="service">
+                        <div id="transport">
                         <li>
                             <a>
                                 <figure>
