--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
 <header id="mainNav">
 <div id="header" class="home over">
 <h1 class="h_logo">
-<a href="https://www.marusam.com">
+<a href="/marusan-site/">
 <img alt="株式会社マルサン" src="img/logo.png"/>
 </a>
 </h1>
