--- a/index.html
+++ b/index.html
@@ -583,31 +583,37 @@
 </h2>
 <p>機械設備の搬出・搬入・移動・メンテナンス・輸送から、特殊車両の通行許可申請まで、トータルでサポートします。</p>
 <div class="c_btn">
-<a href="/service/">詳しく見る</a>
+<a href="service/">詳しく見る</a>
 </div>
 </div>
 <ul>
 <li>
-<a href="/service/transport/">
+<a href="service/#transport/">
 <i class="ft_e">01</i>
                                 重量物の運搬据付
                             </a>
 </li>
 <li>
-<a href="/service/dismantling/">
-<i class="ft_e">02</i>
+<a href="service/dismantling/">
+<i class="ft_e">03</i>
+                                据付後の設備工事、各種工事
+                            </a>
+</li>
+<li>
+<a href="service/layout/">
+<i class="ft_e">04</i>
                                 保管・修理・保守
                             </a>
 </li>
 <li>
-<a href="/service/layout/">
-<i class="ft_e">03</i>
+<a href="service/disposal/">
+<i class="ft_e">05</i>
                                 解体・撤去・廃棄
                             </a>
 </li>
 <li>
-<a href="/service/trance-engine/">
-<i class="ft_e">04</i>
+<a href="service/trance-engine/">
+<i class="ft_e">06</i>
                                 SDGs事業
 </a>
 </li>
@@ -622,7 +628,7 @@
   搬入運搬事例
 </h2>
 <div class="c_btn">
-<a href="/cases/">詳しく見る</a>
+<a href="cases/">詳しく見る</a>
 </div>
 <ul class="case_list">
 <li>
