--- a/cases/index.html
+++ b/cases/index.html
@@ -437,7 +437,7 @@
 </div>
 <ul class="h_nav">
 <li>
-<a href="service/">事業案内</a>
+<a href="/marusan-site/service/">事業案内</a>
 <div class="sub">
 <div class="row">
 <dl>
@@ -446,7 +446,7 @@
                                                機械や設備の輸送・移動・解体・組立、据え付けを主とした運送事業を行なっております。
                       
                                                 <div class="c_btn">
-<a href="service/">詳しく見る</a>
+<a href="/marusan-site/service/">詳しく見る</a>
 </div>
 </dd>
 </dl>
@@ -536,7 +536,7 @@
                 <div class="u_inner">
                     <h2 class="c_ttl">
                         <i class="ft_e w">Case</i>
-                        事例紹介
+                        搬入運搬事例
                     </h2>
                 </div>
                 <figure>
