--- a/index.html
+++ b/index.html
@@ -594,25 +594,25 @@
                             </a>
 </li>
 <li>
-<a href="service/dismantling/">
+<a href="service/#dismantling/">
 <i class="ft_e">03</i>
                                 据付後の設備工事、各種工事
                             </a>
 </li>
 <li>
-<a href="service/layout/">
+<a href="service/#layout/">
 <i class="ft_e">04</i>
                                 保管・修理・保守
                             </a>
 </li>
 <li>
-<a href="service/disposal/">
+<a href="service/#disposal/">
 <i class="ft_e">05</i>
                                 解体・撤去・廃棄
                             </a>
 </li>
 <li>
-<a href="service/trance-engine/">
+<a href="service/#trance-engine/">
 <i class="ft_e">06</i>
                                 SDGs事業
 </a>
