--- a/staff/index.html
+++ b/staff/index.html
@@ -567,14 +567,14 @@
                                 <a>
 
                                     <div class="sphide">
-                                    <img width="525" height="700" src="img/imagekumitate01.jpg" class="attachment-medium size-medium wp-post-image" alt="" decoding="async" loading="lazy"/>
+                                    <img width="525" height="700" src="img/image_staff02.jpg" class="attachment-medium size-medium wp-post-image" alt="" decoding="async" loading="lazy"/>
                                     </div>
                                     <div class="pchide">
-                                    <img width="525" height="700" src="img/imagekumitate01_sp.jpg" class="attachment-medium size-medium wp-post-image" alt="" decoding="async" loading="lazy"/>
+                                    <img width="525" height="700" src="img/image_staff02_sp.jpg" class="attachment-medium size-medium wp-post-image" alt="" decoding="async" loading="lazy"/>
                                     </div>
                                     <p>
-                                        <i>フラワーキーパー移設工事</i>
-                                        <br>クリアランス　高さ10mm・幅5mm しかない搬入口に、長さ10mのフラワーキーパーを寝かせて搬入口を通過させました。
+                                        <i>安全教育</i>
+                                        <br>重量物運搬作業の安全性は絶対的に必要です。<br>我々は輸送事故や製品破損を未然に防ぐために、講習や教育プログラムを提供しています。例えば、フォークリフト運転教育や現場作業安全研修などがあります。また事故再発防止研修会では、過去の事故事例を通じて再発を防ぐための取り組みを行っています。<br>定期的な研修を通じて、社員の安全意識を常に向上させています。
                                     </p>
                                 </a>
                             </li>
