--- a/staff/index.html
+++ b/staff/index.html
@@ -582,14 +582,14 @@
                                 <a>
 
                                     <div class="sphide">
-                                    <img width="525" height="700" src="img/imagekumitate03.jpg" class="attachment-medium size-medium wp-post-image" alt="" decoding="async" loading="lazy"/>
+                                    <img width="525" height="700" src="img/image_staff03.jpg" class="attachment-medium size-medium wp-post-image" alt="" decoding="async" loading="lazy"/>
                                     </div>
                                     <div class="pchide">
-                                    <img width="525" height="700" src="img/imagekumitate03_sp.jpg" class="attachment-medium size-medium wp-post-image" alt="" decoding="async" loading="lazy"/>
+                                    <img width="525" height="700" src="img/image_staff03_sp.jpg" class="attachment-medium size-medium wp-post-image" alt="" decoding="async" loading="lazy"/>
                                     </div>
                                     <p>
-                                        <i>【高冷凍機の据付】ビルの屋上での据付作業事</i>
-                                        <br>80ｔラフタークレーンで1.5ｔの冷凍機を幅2ｍの仮設ステージの上に荷上げしています。<br>60ｍ横引きました。周囲に親ロープを張って安全対策も怠りません。
+                                        <i>資格支援制度</i>
+                                        <br>重量物運搬の業務内容には資格が必要となります。大型免許、けん引免許、フォークリフト運転技能講習、玉掛け技能講習、小型移動式クレーン技能講習などがあります。<br>スキルアップを目指し資格を取りたい社員には資格支援制度があり、会社から一部を補助をさせていただいております。
                                     </p>
                                 </a>
                             </li>
@@ -597,32 +597,18 @@
                                 <a>
 
                                     <div class="sphide">
-                                    <img width="525" height="700" src="img/imagekumitate04.jpg" class="attachment-medium size-medium wp-post-image" alt="" decoding="async" loading="lazy"/>
+                                    <img width="525" height="700" src="img/image_staff04.jpg" class="attachment-medium size-medium wp-post-image" alt="" decoding="async" loading="lazy"/>
                                     </div>
                                     <div class="pchide">
-                                    <img width="525" height="700" src="img/imagekumitate04_sp.jpg" class="attachment-medium size-medium wp-post-image" alt="" decoding="async" loading="lazy"/>
+                                    <img width="525" height="700" src="img/image_staff04_sp.jpg" class="attachment-medium size-medium wp-post-image" alt="" decoding="async" loading="lazy"/>
                                     </div>
                                     <p>
-                                        <i>プレハブ冷蔵庫4坪組み立て工事</i>
-                                        <br>この狭いスペースにフルサイズで4坪のプレハブ冷蔵庫を組み立てます。
+                                        <i>安全表彰会</i>
+                                        <br>当社では、安全や品質に対する士気を高める目的から、スーパー設備建設業界の安全大会に参加し、交通安全功労者や安全管理に貢献した個人を表彰しています。
                                     </p>
                                 </a>
                             </li>
-                            <li>
-                                <a>
-
-                                    <div class="sphide">
-                                    <img width="525" height="700" src="img/imagekumitate05.jpg" class="attachment-medium size-medium wp-post-image" alt="" decoding="async" loading="lazy"/>
-                                    </div>
-                                    <div class="pchide">
-                                    <img width="525" height="700" src="img/imagekumitate05_sp.jpg" class="attachment-medium size-medium wp-post-image" alt="" decoding="async" loading="lazy"/>
-                                    </div>
-                                    <p>
-                                        <i>水槽の運送搬入</i>
-                                        <br>大型の鮮魚イケスも運送から搬入、据付までお任せください。
-                                    </p>
-                                </a>
-                            </li>
+                     
                        
                         </ul>
 
