--- a/staff/index.html
+++ b/staff/index.html
@@ -535,7 +535,7 @@
             <div class="low_header">
                 <div class="u_inner">
                     <h2 class="c_ttl">
-                        <i class="ft_e w">development</i>
+                        <i class="ft_e w">talent</i>
                         人材育成
                     </h2>
                 </div>
