--- a/index.html
+++ b/index.html
@@ -482,38 +482,38 @@
 <div class="row">
 <ul>
 <li>
-<a href="/warehouse/">保有倉庫</a>
+<a href="warehouse/">保有倉庫</a>
 </li>
 </ul>
 <ul>
 <li>
-<a href="/vehicle/">保有車両</a>
+<a href="vehicle/">保有車両</a>
 </li>
 </ul>
 </div>
 </div>
 </li>
 <li class="u_visible_sp">
-<a href="/warehouse/">設備紹介（保有倉庫）</a>
+<a href="warehouse/">設備紹介（保有倉庫）</a>
 </li>
 <li class="u_visible_sp">
-<a href="/vehicle/">設備紹介（保有車両）</a>
+<a href="vehicle/">設備紹介（保有車両）</a>
 </li>
 <li>
-<a href="/company/">SDGs</a>
+<a href="company/">SDGs</a>
 </li>
 <li>
-<a href="/company/">お仕事の流れ</a>
+<a href="company/">お仕事の流れ</a>
 </li>
 <li>
-<a href="/company/">会社案内</a>
+<a href="company/">会社案内</a>
 </li>
 <li>
-<a href="/contact/">お問い合わせ</a>
+<a href="contact/">お問い合わせ</a>
 </li>
 </ul>
 <div class="h_recruit">
-<a href="/recruit/">求人・採用情報</a>
+<a href="recruit/">求人・採用情報</a>
 </div>
 </div>
 </nav>
