--- a/index.html
+++ b/index.html
@@ -482,12 +482,12 @@
 <div class="row">
 <ul>
 <li>
-<a href="warehouse/">保有倉庫</a>
+<a href="/marusan-site/warehouse/">保有倉庫</a>
 </li>
 </ul>
 <ul>
 <li>
-<a href="vehicle/">保有車両</a>
+<a href="/marusan-site/vehicle/">保有車両</a>
 </li>
 </ul>
 </div>
