--- a/staff/index.html
+++ b/staff/index.html
@@ -469,7 +469,7 @@
 </div>
 </li>
 <li>
-<a href="./">搬入運搬事例</a>
+<a href="./cases">搬入運搬事例</a>
 </li>
 <li>
 <a href="../staff">人材育成</a>
@@ -480,22 +480,22 @@
 <div class="row">
 <ul>
 <li>
-<a href="/warehouse/">保有倉庫</a>
+<a href="/warehouse">保有倉庫</a>
 </li>
 </ul>
 <ul>
 <li>
-<a href="/vehicle/">保有車両</a>
+<a href="/vehicle">保有車両</a>
 </li>
 </ul>
 </div>
 </div>
 </li>
 <li class="u_visible_sp">
-<a href="/warehouse/">設備紹介（保有倉庫）</a>
+<a href="/warehouse">設備紹介（保有倉庫）</a>
 </li>
 <li class="u_visible_sp">
-<a href="/vehicle/">設備紹介（保有車両）</a>
+<a href="/vehicle">設備紹介（保有車両）</a>
 </li>
 <li>
 <a href="/company/">SDGs</a>
