--- a/index.html
+++ b/index.html
@@ -679,10 +679,10 @@
 </h2>
 <ul>
 <li>
-<a class="a" href="/warehouse/">重量物の保管倉庫</a>
+<a class="a" href="/marusan-site/warehouse/">重量物の保管倉庫</a>
 </li>
 <li>
-<a class="b" href="/vehicle/">保有車両</a>
+<a class="b" href="/marusan-site/vehicle/">保有車両</a>
 </li>
 </ul>
 </div>
