--- a/index.html
+++ b/index.html
@@ -500,7 +500,7 @@
 <a href="vehicle/">設備紹介（保有車両）</a>
 </li>
 <li>
-<a href="company/">SDGs</a>
+<a href="sdgs/">SDGs</a>
 </li>
 <li>
 <a href="company/">お仕事の流れ</a>
@@ -740,19 +740,19 @@
 </div>
 <ul class="f_nav">
 <li>
-<a href="/service/">事業案内</a>
+<a href="service/">事業案内</a>
 </li>
 <li>
-<a href="/category/blog/">搬入運搬事例</a>
+<a href="cases/">搬入運搬事例</a>
 </li>
 <li>
-<a href="/cases/">人材育成</a>
+<a href="staff/">人材育成</a>
 </li>
 <li>
-<a href="/contact/">車両設備紹介</a>
+<a href="/marusan-site/warehouse/">車両設備紹介</a>
 </li>
 <li>
-<a href="/company/">SDGs</a>
+<a href="sdgs/">SDGs</a>
 </li>
 <li>
 <a href="/recruit/">お仕事の流れ</a>
