--- a/vehicle/index.html
+++ b/vehicle/index.html
@@ -469,10 +469,10 @@
 </div>
 </li>
 <li>
-<a href="./">搬入運搬事例</a>
+<a href="./cases">搬入運搬事例</a>
 </li>
 <li>
-<a href="../staff">人材育成</a>
+<a href="./staff">人材育成</a>
 </li>
 <li class="u_visible_pc">
 <a href="#">車両・設備紹介</a>
@@ -480,38 +480,38 @@
 <div class="row">
 <ul>
 <li>
-<a href="/warehouse/">保有倉庫</a>
+<a href="warehouse/">保有倉庫</a>
 </li>
 </ul>
 <ul>
 <li>
-<a href="/vehicle/">保有車両</a>
+<a href="vehicle/">保有車両</a>
 </li>
 </ul>
 </div>
 </div>
 </li>
 <li class="u_visible_sp">
-<a href="/warehouse/">設備紹介（保有倉庫）</a>
+<a href="warehouse/">設備紹介（保有倉庫）</a>
 </li>
 <li class="u_visible_sp">
-<a href="/vehicle/">設備紹介（保有車両）</a>
+<a href="vehicle/">設備紹介（保有車両）</a>
 </li>
 <li>
-<a href="/company/">SDGs</a>
+<a href="company/">SDGs</a>
 </li>
 <li>
-<a href="/company/">お仕事の流れ</a>
+<a href="company/">お仕事の流れ</a>
 </li>
 <li>
-<a href="/company/">会社案内</a>
+<a href="company/">会社案内</a>
 </li>
 <li>
-<a href="/contact/">お問い合わせ</a>
+<a href="contact/">お問い合わせ</a>
 </li>
 </ul>
 <div class="h_recruit">
-<a href="/recruit/">求人・採用情報</a>
+<a href="recruit/">求人・採用情報</a>
 </div>
 </div>
 </nav>
@@ -550,13 +550,13 @@
                 <ul class="low_nav">
                     <li>
                         <a href="#vehicle">
-                            <i class="ft_e">VEHICLE LIST</i>
+                            
                             車両一覧
                         </a>
                     </li>
                     <li>
                         <a href="#facility">
-                            <i class="ft_e">FACILITY LIST </i>
+                            
                             設備一覧
                         </a>
                     </li>
