--- a/staff/index.html
+++ b/staff/index.html
@@ -469,7 +469,7 @@
 </div>
 </li>
 <li>
-<a href="./cases">搬入運搬事例</a>
+<a href="/marusan-site/cases/">搬入運搬事例</a>
 </li>
 <li>
 <a href="../staff">人材育成</a>
@@ -480,12 +480,12 @@
 <div class="row">
 <ul>
 <li>
-<a href="/warehouse">保有倉庫</a>
+<a href="/marusan-site/warehouse">保有倉庫</a>
 </li>
 </ul>
 <ul>
 <li>
-<a href="/vehicle">保有車両</a>
+<a href="/marusan-site/vehicle">保有車両</a>
 </li>
 </ul>
 </div>
