--- a/service/index.html
+++ b/service/index.html
@@ -594,7 +594,7 @@
                         <li>
                             <dl>
                                 <dt>
-                                    人材教育に力を入れお客様が満足し、<span class="u_visible_pc">付加価値の高いサービスを提供</span>
+                                    人材教育に力を入れ、高いサービスを提供</span>
                                     <i class="ft_e">03</i>
                                 </dt>
                                 <dd>
