--- a/index.html
+++ b/index.html
@@ -570,7 +570,7 @@
                         私たち株式会社マルサンは、重軽量物の運搬・組立解体を通して<br/>北陸シェアのは半数もち、地域の発展と人々の暮らしを支えています。
                     </p>
 <p>他社で断られたあんなことやこんなことも、すべてお任せください。</p>
-<img class="" alt="株式会社マルサン" src="img/cc.png"/>
+<img class="cc_image" alt="株式会社マルサン" src="img/cc.png"/>
 </div>
 </section>
 <section class="top_service">
