--- a/sdgs/index.html
+++ b/sdgs/index.html
@@ -551,14 +551,14 @@
                                 
 
                                     <div class="sphide">
-                                    <img width="525" height="700" src="img/image_staff01.jpg" class="attachment-medium size-medium wp-post-image" alt="" decoding="async" loading="lazy"/>
+                                    <img width="525" height="700" src="img/image_sdgs01.jpg" class="attachment-medium size-medium wp-post-image" alt="" decoding="async" loading="lazy"/>
                                     </div>
                                     <div class="pchide">
-                                    <img width="525" height="700" src="img/image_staff01_sp.jpg" class="attachment-medium size-medium wp-post-image" alt="" decoding="async" loading="lazy"/>
+                                    <img width="525" height="700" src="img/image_sdgs01_sp.jpg" class="attachment-medium size-medium wp-post-image" alt="" decoding="async" loading="lazy"/>
                                     </div>
                                     <p>
-                                        <i>新人教育</i>
-                                        <br>当社では、現場デビューまで、先輩社員が一対一で指導し、学習を進めます。<br>社内の規定や安全規則、道路交通法などの法令に加え、各種設備や機材の操作方法、重量物の搬入手順など、必要な知識を習得します。その後、先輩社員と一緒に運転研修や重量物の搬入研修、トレーラーやフォークリフトなどの実技研修を行います。<br>また、不安や疑問があれば積極的に質問や相談ができるよう、指導体制や社内環境も整備しています。
+                                        <i>太陽光発電所による再生可能エネルギー事業</i>
+                                        <br>弊社は三重県いなべ市に太陽光発電所を所有しています。すべて中部電力会社に売電し、再生可能エネルギーの普及に力を入れています。<br>再生可能エネルギー事業への取り組みを通して、二酸化炭素排出による地球温暖化の抑制といった、地球環境への負荷軽減に貢献しています。
                                     </p>
                                 
                             </li>
