--- a/index.html
+++ b/index.html
@@ -610,7 +610,7 @@
                             </a>
 </li>
 <li>
-<a href="service/#trance-engine">
+<a href="sdgs/">
 <i class="ft_e">06</i>
                                 SDGs事業
 </a>
