--- a/index.html
+++ b/index.html
@@ -756,7 +756,7 @@
 <a href="recruit/">お仕事の流れ</a>
 </li>
 <li>
-<a href="recruit/">会社案内</a>
+<a href="company/">会社案内</a>
 </li>
 <li>
 <a href="staff/">お問い合わせ</a>
