--- a/company/index.html
+++ b/company/index.html
@@ -545,10 +545,9 @@
             </div>
             <div class="u_inner">
                 <dl class="low_lead">
-                    <dt>約40年間、地域の人たちに愛されつづけている運送会社です。確かな技術を持った作業員がおり、安心で信頼されるサービスを提供します。</dt>
+                    <dt>これからも豊富な実績でお客様のご要望に機動力で対応いたします</dt>
                     <dd>
-                        機械や設備の搬出・搬入・移動・メンテナンス・解体・組み立てからまで
-        <br>トータルでサポートします。
+                        お客様に育てて頂いて４０年余りを迎えることができました。これからもお客様にご愛顧頂けますように、全社員で取り組んで参ります。何卒、宜しくお願い申し上げます。
       
                     </dd>
                 </dl>
