--- a/company/index.html
+++ b/company/index.html
@@ -501,7 +501,7 @@
 <a href="/marusan-site/sdgs/">SDGs</a>
 </li>
 <li>
-<a href="/marusan-site/company/">お仕事の流れ</a>
+<a href="/marusan-site/workflow/">お仕事の流れ</a>
 </li>
 <li>
 <a href="/marusan-site/company/">会社案内</a>
@@ -535,7 +535,7 @@
                 <div class="u_inner">
 
                     <h2 class="c_ttl">
-                        <i class="ft_e w">Services</i>
+                        <i class="ft_e w">Company</i>
                         会社案内
                     </h2>
                 </div>
@@ -688,7 +688,7 @@
 <a href="/marusan-site/sdgs/">SDGs</a>
 </li>
 <li>
-<a href="/marusan-site/work/">お仕事の流れ</a>
+<a href="/marusan-site/workflow/">お仕事の流れ</a>
 </li>
 <li>
 <a href="/marusan-site/company/">会社案内</a>
