--- a/index.html
+++ b/index.html
@@ -503,7 +503,7 @@
 <a href="sdgs/">SDGs</a>
 </li>
 <li>
-<a href="company/">お仕事の流れ</a>
+<a href="workflow/">お仕事の流れ</a>
 </li>
 <li>
 <a href="company/">会社案内</a>
@@ -753,7 +753,7 @@
 <a href="sdgs/">SDGs</a>
 </li>
 <li>
-<a href="recruit/">お仕事の流れ</a>
+<a href="workflow/">お仕事の流れ</a>
 </li>
 <li>
 <a href="company/">会社案内</a>
