--- a/index.html
+++ b/index.html
@@ -704,7 +704,7 @@
                     </p>
 <p>ここでしかできない仕事がある。</p>
 <div class="c_btn">
-<a href="/recruit/">求人・採用情報を見る</a>
+<a href="recruit/">求人・採用情報を見る</a>
 </div>
 </ul>
 </div>
@@ -762,7 +762,7 @@
 <a href="staff/">お問い合わせ</a>
 </li>
 <li>
-<a href="access/">求人・採用情報</a>
+<a href="recruit/">求人・採用情報</a>
 </li>
 </ul>
 </div>
