--- a/index.html
+++ b/index.html
@@ -524,7 +524,7 @@
 
 
     <div class="fixed_recruit">
-      <a href="/recruit/">
+      <a href="recruit/">
 
         <p><i class="ft_e">Recruit</i>積極採用中！</p>
       </a>
