--- a/index.html
+++ b/index.html
@@ -661,7 +661,7 @@
 <img alt="" class="attachment-medium size-medium wp-post-image" decoding="async" fetchpriority="high" height="700" sizes="(max-width: 525px) 100vw, 525px" src="img/image04.png" width="525"/>
 <p>
 <i>重量物の運搬、据え付け</i>
-<br/>プレハブ冷蔵庫4坪組み立て工事
+<br/>プレハブ冷蔵庫組み立て工事
                                 </p>
 
 </li>
