--- a/index.html
+++ b/index.html
@@ -569,7 +569,7 @@
 <p>
                         私達株式会社マルサンは、業務用ショウケース、冷蔵庫の搬入据付を通して<br/>北陸シェアのは半数もち、地域の発展と人々の暮らしを支えています。
                     </p>
-<p>他社で断られたあんなことやこんなことも、すべてお任せください。</p>
+<p>どんなことも先ずは気軽にお聞かせください。</p>
 <img class="cc_image" alt="株式会社マルサン" src="img/cc.png"/>
 </div>
 </section>
@@ -579,7 +579,7 @@
   <h2 class="c_ttl">
   <i class="ft_e">Services</i> 事業案内
 </h2>
-<p>機械設備の搬出・搬入・移動・メンテナンス・輸送から、特殊車両の通行許可申請まで、トータルでサポートします。</p>
+<p>ショウケース、厨房、機械設備の搬出、搬入、移動、廃棄までトータルサポートします。</p>
 <div class="c_btn">
 <a href="service/">詳しく見る</a>
 </div>
@@ -594,7 +594,7 @@
 <li>
 <a href="service/#dismantling">
 <i class="ft_e">03</i>
-                                据付後の設備工事、各種工事
+                                据付後の設備工事
                             </a>
 </li>
 <li>
@@ -693,7 +693,7 @@
 <div class="u_inner row">
 <div class="desc">
 <h2 class="c_ttl">
-  <i class="ft_e w">Job offer！</i>
+  <i class="ft_e w">Job offer</i>
   北陸で、社会貢献
 </h2>
 <ul>
