--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@
 <a href="service/#transport">重量物運搬据付</a>
 </li>
 <li>
-<a href="service/#dismantling">据付後の設備工事、各種工事</a>
+<a href="service/#dismantling">据付後の設備工事</a>
 </li>
 <li>
 <a href="service/#layout">保管・修理・保守</a>
