--- a/cases/index.html
+++ b/cases/index.html
@@ -455,7 +455,7 @@
 <a href="/marusan-site/service/#transport">重量物運搬据付</a>
 </li>
 <li>
-<a href="/marusan-site/service/#dismantling">据付後の設備工事、各種工事</a>
+<a href="/marusan-site/service/#dismantling">据付後の設備工事</a>
 </li>
 <li>
 <a href="/marusan-site/service/#layout">保管・修理・保守</a>
