--- a/index.html
+++ b/index.html
@@ -738,31 +738,31 @@
 </div>
 <ul class="f_nav">
 <li>
-<a href="service/">事業案内</a>
+<a href="/marusan-site/service/">事業案内</a>
 </li>
 <li>
-<a href="cases/">搬入運搬事例</a>
+<a href="/marusan-site/cases/">搬入運搬事例</a>
 </li>
 <li>
-<a href="staff/">人材育成</a>
+<a href="/marusan-site/staff/">人材育成</a>
 </li>
 <li>
-<a href="/marusan-site/warehouse/">車両設備紹介</a>
+<a href="/marusan-site/vehicle">車両設備紹介</a>
 </li>
 <li>
-<a href="sdgs/">SDGs</a>
+<a href="/marusan-site/sdgs/">SDGs</a>
 </li>
 <li>
-<a href="workflow/">お仕事の流れ</a>
+<a href="/marusan-site/workflow/">お仕事の流れ</a>
 </li>
 <li>
-<a href="company/">会社案内</a>
+<a href="/marusan-site/company/">会社案内</a>
 </li>
 <li>
-<a href="staff/">お問い合わせ</a>
+<a href="/marusan-site/contact/">お問い合わせ</a>
 </li>
 <li>
-<a href="recruit/">求人・採用情報</a>
+<a href="/marusan-site/recruit/">求人・採用情報</a>
 </li>
 </ul>
 </div>
