--- a/vehicle/index.html
+++ b/vehicle/index.html
@@ -556,7 +556,7 @@
                     </li>
                     <li>
                         <a href="#facility">
-                            <i class="ft_e">FACILITY LIST </i>
+                            <i class="ft_e">QUAKIFED LIST </i>
                             有資格者一案
                         </a>
                     </li>
@@ -613,7 +613,7 @@
             <section class="faci_sec faci_vehicle">
                 <div class="u_inner">
                     <h3 class="low_ttl evt evt_ttl" data-anim="show">
-                        <i class="ft_e">FACILITY LIST </i>
+                        <i class="ft_e">QUAKIFED LIST </i>
                         有資格者一覧
                     </h3>
                     <div class="wrap">
