--- a/index.html
+++ b/index.html
@@ -550,6 +550,18 @@
 <div class="img u_visible_pc" style="background-image: url(img/mv_slider_img03.jpg)"></div>
 <div class="img u_visible_sp" style="background-image: url(img/mv_slider_img03_sp.jpg)"></div>
 </div>
+<div class="item">
+<div class="img u_visible_pc" style="background-image: url(img/mv_slider_img04.jpg)"></div>
+<div class="img u_visible_sp" style="background-image: url(img/mv_slider_img04_sp.jpg)"></div>
+</div>
+<div class="item">
+<div class="img u_visible_pc" style="background-image: url(img/mv_slider_img05.jpg)"></div>
+<div class="img u_visible_sp" style="background-image: url(img/mv_slider_img05_sp.jpg)"></div>
+</div>
+<div class="item">
+<div class="img u_visible_pc" style="background-image: url(img/mv_slider_img06.jpg)"></div>
+<div class="img u_visible_sp" style="background-image: url(img/mv_slider_img06_sp.jpg)"></div>
+</div>
 </div>
 <p class="catch">
 <i>運搬</i>も<i>搬入</i>もお任せください
