--- a/index.html
+++ b/index.html
@@ -564,7 +564,7 @@
 </div>
 </div>
 <p class="catch">
-<i>重たい物の移動</i>、<i>設置</i>、<i>撤去</i><br>もお任せください
+<i>重たい物の移動</i>、<i>設置</i>、<i>撤去</i>
 </p>
 </div>
 
