--- a/index.html
+++ b/index.html
@@ -539,28 +539,28 @@
 <div class="top_main">
 <div class="slide">
 <div class="item">
-<div class="img u_visible_pc" style="background-image: url(img/mv_slider_img01.jpg)"></div>
-<div class="img u_visible_sp" style="background-image: url(img/mv_slider_img01_sp.jpg)"></div>
+<img class="pc_only" src="img/mv_slider_img01.jpg" alt="" >
+<img class="sp_only" src="img/mv_slider_img01_sp.jpg" alt="">
 </div>
 <div class="item">
-<div class="img u_visible_pc" style="background-image: url(img/mv_slider_img02.jpg)"></div>
-<div class="img u_visible_sp" style="background-image: url(img/mv_slider_img02_sp.jpg)"></div>
+<img class="sp_hide" src="img/mv_slider_img02.jpg" alt="" >
+<img class="sp_only" src="img/mv_slider_img02_sp.jpg" alt="" >
 </div>
 <div class="item">
-<div class="img u_visible_pc" style="background-image: url(img/mv_slider_img03.jpg)"></div>
-<div class="img u_visible_sp" style="background-image: url(img/mv_slider_img03_sp.jpg)"></div>
+<img class="sp_hide" src="img/mv_slider_img03.jpg" alt="" />
+<img class="sp_only" src="img/mv_slider_img03_sp.jpg" alt="" >
 </div>
 <div class="item">
-<div class="img u_visible_pc" style="background-image: url(img/mv_slider_img04.jpg)"></div>
-<div class="img u_visible_sp" style="background-image: url(img/mv_slider_img04_sp.jpg)"></div>
+<img class="sp_hide" src="img/mv_slider_img04.jpg" alt="" >
+<img class="sp_only" src="img/mv_slider_img04_sp.jpg" alt="" >
 </div>
 <div class="item">
-<div class="img u_visible_pc" style="background-image: url(img/mv_slider_img05.jpg)"></div>
-<div class="img u_visible_sp" style="background-image: url(img/mv_slider_img05_sp.jpg)"></div>
+<img class="sp_hide" src="img/mv_slider_img05.jpg" alt="" >
+<img class="sp_only" src="img/mv_slider_img05_sp.jpg" alt="" >
 </div>
 <div class="item">
-<div class="img u_visible_pc" style="background-image: url(img/mv_slider_img06.jpg)"></div>
-<div class="img u_visible_sp" style="background-image: url(img/mv_slider_img06_sp.jpg)"></div>
+<img class="sp_hide" src="img/mv_slider_img06.jpg" alt="" >
+<img class="sp_only" src="img/mv_slider_img06_sp.jpg" alt="" >
 </div>
 </div>
 <p class="catch">
