--- a/index.html
+++ b/index.html
@@ -597,36 +597,32 @@
 </div>
 </div>
 <ul>
-<li>
-<a href="service/#transport">
-<i class="ft_e">01</i>
-                                重量物の運搬据付
-                            </a>
+<li class="ft_e">
+  <a href="service/#transport" class="kv-link" aria-label="重量物の運搬据付">
+    <img src="img/01.jpg" alt="">
+  </a>
 </li>
-<li>
-<a href="service/#dismantling">
-<i class="ft_e">03</i>
-                                据付後の設備工事
-                            </a>
+<li class="ft_e">
+  <a href="service/#dismantling" class="kv-link" aria-label="重量物の運搬据付">
+    <img src="img/02.jpg" alt="">
+  </a>
 </li>
-<li>
-<a href="service/#layout">
-<i class="ft_e">04</i>
-                                保管・修理・保守
-                            </a>
+<li class="ft_e">
+  <a href="service/#layout" class="kv-link" aria-label="重量物の運搬据付">
+    <img src="img/03.jpg" alt="">
+  </a>
 </li>
-<li>
-<a href="service/#disposal">
-<i class="ft_e">05</i>
-                                解体・撤去・廃棄
-                            </a>
+<li class="ft_e">
+  <a href="service/#disposal" class="kv-link" aria-label="重量物の運搬据付">
+    <img src="img/04.jpg" alt="">
+  </a>
 </li>
-<li>
-<a href="sdgs/">
-<i class="ft_e">06</i>
-                                SDGs事業
-</a>
+<li class="ft_e">
+  <a href="sdgs/" class="kv-link" aria-label="重量物の運搬据付">
+    <img src="img/04.jpg" alt="">
+  </a>
 </li>
+
 </ul>
 </div>
 </section>
