--- a/index.html
+++ b/index.html
@@ -437,33 +437,38 @@
 <div class="u_visible_sp h_menu_close">
 <img alt="CLOSE" src="img/h_close.png"/>
 </div>
+
+
+
 <ul class="h_nav">
 <li>
-<a href="service/">事業案内</a>
+<a href="/marusan-site/service/">事業案内</a>
 <div class="sub">
+
 <div class="row">
 <dl>
 <dt>事業案内</dt>
 <dd>
-                                                機械や設備の輸送・移動・解体・組立、据え付けを主とした運送事業を行なっております。
+                                               機械や設備の輸送・移動・解体・組立、据え付けを主とした運送事業を行なっております。
                       
                                                 <div class="c_btn">
-<a href="service/">詳しく見る</a>
+<a href="/marusan-site/service/">詳しく見る</a>
 </div>
 </dd>
 </dl>
+
 <ul>
 <li>
-<a href="service/#transport">重量物運搬据付</a>
+<a href="/marusan-site/service/#transport">重量物運搬据付</a>
 </li>
 <li>
-<a href="service/#dismantling">据付後の設備工事</a>
+<a href="/marusan-site/service/#dismantling">据付後の設備工事、各種工事</a>
 </li>
 <li>
-<a href="service/#layout">保管・修理・保守</a>
+<a href="/marusan-site/service/#layout">保管・修理・保守</a>
 </li>
 <li>
-<a href="service/#disposal">解体・撤去・廃棄</a>
+<a href="/marusan-site/service/#disposal">解体・撤去・廃棄</a>
 </li>
 </ul>
 
@@ -471,10 +476,10 @@
 </div>
 </li>
 <li>
-<a href="cases/">搬入運搬事例</a>
+<a href="/marusan-site/cases">搬入運搬事例</a>
 </li>
 <li>
-<a href="staff/">人材育成</a>
+<a href="/marusan-site/staff">人材育成</a>
 </li>
 <li class="u_visible_pc">
 <a href="#">車両・設備紹介</a>
@@ -482,38 +487,40 @@
 <div class="row">
 <ul>
 <li>
-<a href="/marusan-site/warehouse/">保有倉庫</a>
+<a href="/marusan-site/warehouse">保有倉庫</a>
 </li>
 </ul>
 <ul>
 <li>
-<a href="/marusan-site/vehicle/">保有車両</a>
+<a href="/marusan-site/vehicle">保有車両</a>
 </li>
 </ul>
 </div>
 </div>
 </li>
 <li class="u_visible_sp">
-<a href="warehouse/">設備紹介（保有倉庫）</a>
+<a href="/marusan-site/warehouse">設備紹介（保有倉庫）</a>
 </li>
 <li class="u_visible_sp">
-<a href="vehicle/">設備紹介（保有車両）</a>
+<a href="/marusan-site/vehicle">設備紹介（保有車両）</a>
 </li>
 <li>
-<a href="sdgs/">SDGs</a>
+<a href="/marusan-site/sdgs/">SDGs</a>
 </li>
 <li>
-<a href="workflow/">お仕事の流れ</a>
+<a href="/marusan-site/workflow/">お仕事の流れ</a>
 </li>
 <li>
-<a href="company/">会社案内</a>
+<a href="/marusan-site/company/">会社案内</a>
 </li>
 <li>
-<a href="contact/">お問い合わせ</a>
+<a href="/marusan-site/contact/">お問い合わせ</a>
 </li>
 </ul>
+
+
 <div class="h_recruit">
-<a href="recruit/">求人・採用情報</a>
+<a href="/marusan-site/recruit/">求人・採用情報</a>
 </div>
 </div>
 </nav>
@@ -524,7 +531,7 @@
 
 
     <div class="fixed_recruit">
-      <a href="recruit/">
+      <a href="/marusan-site/recruit/">
 
         <p><i class="ft_e">Recruit</i>積極採用中！</p>
       </a>
@@ -539,28 +546,28 @@
 <div class="top_main">
 <div class="slide">
 <div class="item">
-<img class="pc_only" src="img/mv_slider_img01.jpg" alt="" >
-<img class="sp_only" src="img/mv_slider_img01_sp.jpg" alt="">
+<img class="pc_only" src="img/mv_slider_img01.webp" alt="" >
+<img class="sp_only" src="img/mv_slider_img01_sp.webp" alt="">
 </div>
 <div class="item">
-<img class="sp_hide" src="img/mv_slider_img02.jpg" alt="" >
-<img class="sp_only" src="img/mv_slider_img02_sp.jpg" alt="" >
+<img class="sp_hide" src="img/mv_slider_img02.webp" alt="" >
+<img class="sp_only" src="img/mv_slider_img02_sp.webp" alt="" >
 </div>
 <div class="item">
-<img class="sp_hide" src="img/mv_slider_img03.jpg" alt="" />
-<img class="sp_only" src="img/mv_slider_img03_sp.jpg" alt="" >
+<img class="sp_hide" src="img/mv_slider_img03.webp" alt="" />
+<img class="sp_only" src="img/mv_slider_img03_sp.webp" alt="" >
 </div>
 <div class="item">
-<img class="sp_hide" src="img/mv_slider_img04.jpg" alt="" >
-<img class="sp_only" src="img/mv_slider_img04_sp.jpg" alt="" >
+<img class="sp_hide" src="img/mv_slider_img04.webp" alt="" >
+<img class="sp_only" src="img/mv_slider_img04_sp.webp" alt="" >
 </div>
 <div class="item">
-<img class="sp_hide" src="img/mv_slider_img05.jpg" alt="" >
-<img class="sp_only" src="img/mv_slider_img05_sp.jpg" alt="" >
+<img class="sp_hide" src="img/mv_slider_img05.webp" alt="" >
+<img class="sp_only" src="img/mv_slider_img05_sp.webp" alt="" >
 </div>
 <div class="item">
-<img class="sp_hide" src="img/mv_slider_img06.jpg" alt="" >
-<img class="sp_only" src="img/mv_slider_img06_sp.jpg" alt="" >
+<img class="sp_hide" src="img/mv_slider_img06.webp" alt="" >
+<img class="sp_only" src="img/mv_slider_img06_sp.webp" alt="" >
 </div>
 </div>
 <p class="catch">
@@ -570,8 +577,8 @@
 
 <section class="top_about">
 
-    <img class="sp_hide" alt="株式会社マルサン" src="img/content.jpg"/>
-    <img class="pc_hide" alt="株式会社マルサン" src="img/content_sp.jpg"/>
+    <img class="sp_hide" alt="株式会社マルサン" src="img/content.webp"/>
+    <img class="pc_hide" alt="株式会社マルサン" src="img/content_sp.webp"/>
 
 <div class="u_inner u_relative">
 <h2 class="c_ttl r">
@@ -599,27 +606,27 @@
 <ul>
 <li class="ft_e">
   <a href="service/#transport" class="kv-link" aria-label="重量物の運搬据付">
-    <img src="img/01.jpg" alt="">
+    <img src="img/01.webp" alt="">
   </a>
 </li>
 <li class="ft_e">
   <a href="service/#dismantling" class="kv-link" aria-label="重量物の運搬据付">
-    <img src="img/02.jpg" alt="">
+    <img src="img/02.webp" alt="">
   </a>
 </li>
 <li class="ft_e">
   <a href="service/#layout" class="kv-link" aria-label="重量物の運搬据付">
-    <img src="img/03.jpg" alt="">
+    <img src="img/03.webp" alt="">
   </a>
 </li>
 <li class="ft_e">
   <a href="service/#disposal" class="kv-link" aria-label="重量物の運搬据付">
-    <img src="img/04.jpg" alt="">
+    <img src="img/04.webp" alt="">
   </a>
 </li>
 <li class="ft_e">
   <a href="sdgs/" class="kv-link" aria-label="重量物の運搬据付">
-    <img src="img/05.jpg" alt="">
+    <img src="img/05.webp" alt="">
   </a>
 </li>
 
